--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Eczar|Work+Sans:200,300,400,500" rel="stylesheet">
     <link href="/screen.css" rel="stylesheet">
   </head>
-  <body>
+  <body class='potato'>
 
     <main>
       <header>
