--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,6 @@
     </div>
 
     <script src="/main.js" charset="utf-8"></script>
+    <script src="/20-string-methods.js" charset="utf-8"></script>
   </body>
 </html>
