Completed file structure

--- a/public/index.html
+++ b/public/index.html
@@ -38,13 +38,13 @@
 
 <!-- the a.button's above should change the `src` of the script tag below. -->
 
-    <script>
+    <!-- <script>
       console.log("1st script tag");
-    </script>
+    </script> -->
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="" charset="utf-8">
+    <script id="activeScript" src="./01-variables.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
