--- a/public/index.html
+++ b/public/index.html
@@ -7,32 +7,71 @@
     <link href="https://fonts.googleapis.com/css?family=Eczar|Work+Sans:200,300,400,500" rel="stylesheet">
     <link href="/screen.css" rel="stylesheet">
   </head>
-  <body class='potato'>
+  <body>
 
     <main>
       <header>
         <h1>Javascript Basics</h1>
         <h2>Beau Teaches Javascript</h2>
       </header>
+
       <p>This project is based on
         <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp's</a>
         <i>"Javascript Basics: Beau Teaches Javascript"</i>
         video playlist on YouTube by
         <a href="http://carnes.cc/" target="_blank">Beau Carnes</a>.
       </p>
+
       <p>I started using this basic vanilla JS app to follow along with the videos anyway so I figured in the spirit of freeCodeCamp I'd give it a simple UI and make it public for others to benefit.</p>
+
       <p>Everything is happening in the console so pop open those dev tools and check it out. If you need some help getting this project going, check out the README.md on the Github repo. Also, feel free to tweet at me with questions, comments, concerns, or complaints.</p>
       <!-- Video buttons -->
-      <a class="button" href="https://youtu.be/le-URjBhevE?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='first-button' target="_blank">Variables</a>
-      <a class="button" href="https://youtu.be/808eYu9B9Yw?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='second-button' target="_blank">Data Types</a>
+      <ul class="linkList">
+        <li><a class="button" href="https://youtu.be/le-URjBhevE?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson01' target="_blank">Variables</a></li>
+        <li><a class="button" href="https://youtu.be/808eYu9B9Yw?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson02' target="_blank">Data Types</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
 
-      <!-- <div class="overlay">
+      <div class="overlay">
         <ul class="footer-nav">
           <li>home</li>
           <li>about</li>
           <li>contact</li>
         </ul>
-      </div> -->
+      </div>
 
     </main>
 
