Updated .js files through #12 video

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./01-variables.js" charset="utf-8">
+    <script id="activeScript" src="./12-logical-ops-and-tricks.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
