--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./15-arrays.js" charset="utf-8">
+    <script id="activeScript" src="./16-common-array-methods.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
