finished up through lesson 24

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./20-while-dowhile.js" charset="utf-8">
+    <script id="activeScript" src="./23-objects-part1.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
