added buttons for videos through lesson 24

--- a/public/index.html
+++ b/public/index.html
@@ -27,42 +27,30 @@
       <p>Everything is happening in the console so pop open those dev tools and check it out. If you need some help getting this project going, check out the README.md on the Github repo. Also, feel free to tweet at me with questions, comments, concerns, or complaints.</p>
       <!-- Video buttons -->
       <ul class="linkList">
-        <li><a class="button" href="https://youtu.be/le-URjBhevE?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson01' target="_blank">Variables</a></li>
-        <li><a class="button" href="https://youtu.be/808eYu9B9Yw?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson02' target="_blank">Data Types</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a class="button" href="https://youtu.be/le-URjBhevE?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson01' target="_blank">Lesson #1: Variables</a></li>
+        <li><a class="button" href="https://youtu.be/808eYu9B9Yw?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson02' target="_blank">Lesson #2: Data Types</a></li>
+        <li><a class="button" href="https://youtu.be/nBEBraDJkFg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson03' target="_blank">Lesson #3: Numbers</a></li>
+        <li><a class="button" href="https://youtu.be/Vd_Z1bYGrCM?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson04' target="_blank">Lesson #4: String Basics</a></li>
+        <li><a class="button" href="https://youtu.be/sPmRfjJdg5Y?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson05' target="_blank">Lesson #5: Strings; [bracket-notation]</a></li>
+        <li><a class="button" href="https://youtu.be/VRz0nbax0uI?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson06' target="_blank">Lesson #6: 20 String Methods in 7 Minutes</a></li>
+        <li><a class="button" href="https://youtu.be/R8SjM4DKK80?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson07' target="_blank">Lesson #7: Functions</a></li>
+        <li><a class="button" href="https://youtu.be/C1PZh_ea-7I?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson08' target="_blank">Lesson #8: Hoisting</a></li>
+        <li><a class="button" href="https://youtu.be/7WkfzokHGqo?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson09' target="_blank">Lesson #9: Comparison Operators & If Else</a></li>
+        <li><a class="button" href="https://youtu.be/kVOmc7NK1M0?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson10' target="_blank">Lesson #10: == vs ===</a></li>
+        <li><a class="button" href="https://youtu.be/VwaqJy_clnc?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson11' target="_blank">Lesson #11: Null vs Undefined</a></li>
+        <li><a class="button" href="https://youtu.be/r7v6EIiHfVA?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson12' target="_blank">Lesson #12: Logical Operators && TRICKS with Short-Circuit Evaluation</a></li>
+        <li><a class="button" href="https://youtu.be/s4sB1hm73tw?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id='lesson13' target="_blank">Lesson #13: Ternary Operator</a></li>
+        <li><a class="button" href="https://youtu.be/fM5qnyasUYI?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson14" target="_blank">Lesson #14: Switch Statements</a></li>
+        <li><a class="button" href="https://youtu.be/QEZXbRiaY1I?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson15" target="_blank">Lesson #15: Arrays</a></li>
+        <li><a class="button" href="https://youtu.be/MeZVVxLn26E?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson16" target="_blank">Lesson #16: Common Array Methods</a></li>
+        <li><a class="button" href="https://youtu.be/EeZBKv34mm4?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson17" target="_blank">Lesson #17: Copying Arrays - Deep and Shallow</a></li>
+        <li><a class="button" href="https://youtu.be/-xAJKmjKCUE?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson18" target="_blank">Lesson #18: Random Numbers and ParseInt</a></li>
+        <li><a class="button" href="https://youtu.be/24Wpg6njlYI?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson19" target="_blank">Lesson #19: For Loops</a></li>
+        <li><a class="button" href="https://youtu.be/v9zgD8wjtbw?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson20" target="_blank">Lesson #20: While / Do While</a></li>
+        <li><a class="button" href="https://youtu.be/a3KHBqH7njs?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson21" target="_blank">Lesson #21: For In / For Of</a></li>
+        <li><a class="button" href="https://youtu.be/Urwzk6ILvPQ?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson22" target="_blank">Lesson #22: Array Iteration</a></li>
+        <li><a class="button" href="https://youtu.be/Gp5nnerXETg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson23" target="_blank">Lesson #23: Objects</a></li>
+        <li><a class="button" href="https://youtu.be/r6SnMjsLrBk?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson24" target="_blank">Lesson #24: Objects (part 2)</a></li>
       </ul>
 
       <div class="overlay">
