--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,14 @@
         <li><a class="button" href="https://youtu.be/Urwzk6ILvPQ?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson22" target="_blank">Lesson #22: Array Iteration</a></li>
         <li><a class="button" href="https://youtu.be/Gp5nnerXETg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson23" target="_blank">Lesson #23: Objects</a></li>
         <li><a class="button" href="https://youtu.be/r6SnMjsLrBk?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson24" target="_blank">Lesson #24: Objects (part 2)</a></li>
+        <li><a class="button" href="https://youtu.be/tHRNuBf_8xg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson25" target="_blank">Lesson #25: AJAX</a></li>
       </ul>
-
+      <h2>example: Lesson 25 - AJAX</h2>
+      <p id="demo">Let AJAX change this text</p>
+      <button type="button" onclick="loadDoc()">Change Content</button>
+      <ul>
+        <li><a class="button" href="https://youtube" id="lesson26" target="_blank">Lesson #26: ?</a></li>
+      </ul>
       <div class="overlay">
         <ul class="footer-nav">
           <li>home</li>
@@ -71,7 +77,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./23-objects-part1.js" charset="utf-8">
+    <script id="activeScript" src="./25-ajax.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
