finished through lesson 31

--- a/public/index.html
+++ b/public/index.html
@@ -53,11 +53,15 @@
         <li><a class="button" href="https://youtu.be/r6SnMjsLrBk?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson24" target="_blank">Lesson #24: Objects (part 2)</a></li>
         <li><a class="button" href="https://youtu.be/tHRNuBf_8xg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson25" target="_blank">Lesson #25: AJAX</a></li>
       </ul>
-      <h2>example: Lesson 25 - AJAX</h2>
-      <p id="demo">Let AJAX change this text</p>
-      <button type="button" onclick="loadDoc()">Change Content</button>
+        <h2>example: Lesson 25 - AJAX</h2>
+        <p id="demo">Let AJAX change this text</p>
+        <button type="button" onclick="loadDoc()">Change Content</button>
       <ul>
-        <li><a class="button" href="https://youtube" id="lesson26" target="_blank">Lesson #26: ?</a></li>
+        <li><a class="button" href="https://youtu.be/B-k76DMOj2k?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson26" target="_blank">Lesson #26: JSON</a></li>
+        <li><a class="button" href="https://youtu.be/1JsJx1x35c0?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson27" target="_blank">Lesson #27: Closures</a></li>
+        <li><a class="button" href="https://youtu.be/eOI9GzMfd24?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson28" target="_blank">Lesson #28: This</a></li>
+        <li><a class="button" href="https://youtu.be/IGYxfTTpoFg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson29" target="_blank">Lesson #29: Promises</a></li>
+        <li><a class="button" href="https://youtu.be/OMXtJ0USM8s?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson30" target="_blank">Lesson #30: Desktop Notifications</a></li>
       </ul>
       <div class="overlay">
         <ul class="footer-nav">
@@ -77,7 +81,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./25-ajax.js" charset="utf-8">
+    <script id="activeScript" src="./31-immediately-invoked-func-exp.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
