Finished videos through lesson #36

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         <li><a class="button" href="https://youtu.be/r6SnMjsLrBk?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson24" target="_blank">Lesson #24: Objects (part 2)</a></li>
         <li><a class="button" href="https://youtu.be/tHRNuBf_8xg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson25" target="_blank">Lesson #25: AJAX</a></li>
       </ul>
-        <h2>example: Lesson 25 - AJAX</h2>
+        <h2>Example: Lesson #25: AJAX</h2>
         <p id="demo">Let AJAX change this text</p>
         <button type="button" onclick="loadDoc()">Change Content</button>
       <ul>
@@ -62,6 +62,17 @@
         <li><a class="button" href="https://youtu.be/eOI9GzMfd24?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson28" target="_blank">Lesson #28: This</a></li>
         <li><a class="button" href="https://youtu.be/IGYxfTTpoFg?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson29" target="_blank">Lesson #29: Promises</a></li>
         <li><a class="button" href="https://youtu.be/OMXtJ0USM8s?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson30" target="_blank">Lesson #30: Desktop Notifications</a></li>
+        <li><a class="button" href="https://youtu.be/3cbiZV4H22c?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson31" target="_blank">Lesson #31: Immediately Invoked Function Expression</a></li>
+        <li><a class="button" href="https://youtu.be/uqUYNqZx0qY?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson32" target="_blank">Lesson #32: Strict Mode</a></li>
+        <li><a class="button" href="https://youtu.be/dpTFcPUe2oo?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson33" target="_blank">Lesson #33: Check if a Property is in an Object</a></li>
+        <li><a class="button" href="https://youtu.be/kOcFZV3c75I?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson34" target="_blank">Lesson #34: Timing Events with setInterval and setTimeout</a></li>
+      </ul>
+        <h2>Example: Lesson #34: Timing Events</h2>
+        <p>Click the button below to stop the counter from running (in the console.)</p>
+        <button type="button" onclick="clearInterval(intId)">Stop Time</button>
+      <ul>
+        <li><a class="button" href="https://youtu.be/cFTFtuEQ-10?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson35" target="_blank">Lesson #35: Error Handling in JS (try, catch, finally , throw)</a></li>
+        <li><a class="button" href="https://youtu.be/zwBMp1U6FII?list=PLWKjhJtqVAbk2qRZtWSzCIN38JC_NdhW5" id="lesson36" target="_blank">Lesson #36: Dates</a></li>
       </ul>
       <div class="overlay">
         <ul class="footer-nav">
@@ -81,7 +92,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./30-desktop-notifications.js" charset="utf-8">
+    <script id="activeScript" src="./36-dates.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
