--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
     <script id="main.js" src="/main.js" charset="utf-8"></script>
 
-    <script id="activeScript" src="./36-dates.js" charset="utf-8">
+    <script id="activeScript" src="./01-variables.js" charset="utf-8">
       console.log(document.getElementById('activeScript').src())
     </script>
   </body>
